--- a/content/post/2021-04-05-simulating-prediction-intervals/index.Rmd
+++ b/content/post/2021-04-05-simulating-prediction-intervals/index.Rmd
@@ -54,10 +54,9 @@ These will then be combined to produce an overall measure of uncertainty for the
 
 [^assumptions]: With the caveat that some model types may require *lots* of simulations for the interval produced to be appropriate as discussed [here](https://community.rstudio.com/t/prediction-intervals-with-tidymodels-best-practices/82594/4?u=brshallo) by Max Kuhn. Also, there is usually the assumption that errors are [exchangable](https://en.wikipedia.org/wiki/Exchangeable_random_variables) across observations.
 
-
 # Inspiration
 
-[Dan Saattrup Nielsen](https://saattrupdan.github.io/) also wrote a series of posts on prediction intervals. My approach here is mostly taken from the one he describes in [Boostrapping prediction intervals](https://saattrupdan.github.io/2020-03-01-bootstrap-prediction/). (In the [Appendix], I describe and link to an implementation of an [Alternative Procedure With CV] that is influenced by [suggestions](https://community.rstudio.com/t/prediction-intervals-with-tidymodels-best-practices/82594/4?u=brshallo) from [Max Kuhn](https://twitter.com/topepos).)
+[Dan Saattrup Nielsen](https://saattrupdan.github.io/) also wrote a series of posts on prediction intervals. My approach here is mostly taken from the one he describes in [Boostrapping prediction intervals](https://saattrupdan.github.io/2020-03-01-bootstrap-prediction/). His approach is encoded in python whereas mine is in R and for a [tidymodels](https://www.tidymodels.org/) based set-up^[Mine also includes supporting a pre-processing recipe in addition to a model specification.]. (In the [Appendix], I describe and link to an implementation of an [Alternative Procedure With CV] that is influenced by [suggestions](https://community.rstudio.com/t/prediction-intervals-with-tidymodels-best-practices/82594/4?u=brshallo) from [Max Kuhn](https://twitter.com/topepos).)
 
 Dan's post provides more precise symbolic representations as well as more figures showcasing results and advantages of simulation based approaches, e.g.
 
@@ -70,7 +69,7 @@ The [Appendix] provides links from the web to [Other Examples Using Simulation].
 Given the model training dataset with *n* number of observations...
 
 1. Build *b* number of models using *b* bootstrap resamples on the training dataset (default of *b* is the square root of *n*)^[Per guidance on Nielsen's post -- though Kuhn suggests [here]((https://community.rstudio.com/t/prediction-intervals-with-tidymodels-best-practices/82594/4?u=brshallo) that more samples should be taken.].
-2. Use the [0.632+ rule](https://stats.stackexchange.com/a/96750/193123) for blending errors from analysis and assessment sets (based on amount of overfitting in analysis set) and create a distribution of residuals evenly spaced across quantiles of length *n* -- represents the uncertainty due to the sample.
+2. Use the [0.632+ rule](https://stats.stackexchange.com/a/96750/193123) for blending errors from analysis and assessment sets (based on amount of overfitting in analysis set) and create a distribution of residuals evenly spaced across quantiles of length *n* -- represents distribution for the uncertainty due to the sample.
 
 Given an observation (or set of observations) you would like to produce prediction intervals for...
 
@@ -377,5 +376,3 @@ This approach is influenced by [suggestions](https://community.rstudio.com/t/pre
 
 * only use out-of-sample estimates to produce the interval 
 * estimate the *uncertainty of the sample* using the residuals from a separate set of models built with cross-validation^[Rather than the residuals of the bootstrapped samples used to estimate the *uncertainty of the model*. (However the functions I create do allow for using the bootstrapped resamples to calculate the uncertainty in the sample -- see [gist](https://gist.github.com/brshallo/3db2cd25172899f91b196a90d5980690))]
-* include in the simulation both a model fit specification *and* pre-processing recipe^[Rather than solely focusing on the model for my example.]
-* use the [tidymodels](https://www.tidymodels.org/) / [tidyverse](https://www.tidyverse.org/) ecosystem within R (whereas Dan's examples are encoded in python). 
